# MiniCAD

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MiniCAD.tar  README.md  TESTING.md  TODO.md  build_web.bat  cpp.hint
.claude/: settings.local.json
assets/: MiniCAD.rc  resource.h
assets/shader/: Grip.hlsl  Line.hlsl  Text.hlsl
d3d11/: Camera2D.h  DX11Context.h  WinAppDX11.h  WinMain.cpp
docs/: BUILD_WASM.md
src/: Basic.hlsl  Camera.cpp  Camera.h  Device.cpp  Device.h  Grid.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  RenderTarget.h  Renderer.cpp  Renderer.h  Scene.h  pch.h
src/App/: ErrorReporter.cpp  ErrorReporter.h  Main.cpp  MainWindow.cpp  MainWindow.h  Scene.h  WebMain.cpp
src/App/Abstractions/: IInputHandler.h  ITool.h  IViewContext.h
src/App/Command/: AddEntityCommand.h  BatchAddCommand.h  BatchDeleteCommand.h  DeleteEntityCommand.h  ICommand.h  LayerCommands.h
src/App/CommandStack/: CommandStack.cpp  CommandStack.h
src/App/Document/: Document.cpp  Document.h
src/App/Editor/: Editor.cpp  Editor.h
src/App/Input/: IEventHandler.h  IInputHandler.h  InputEvent.h  InputSystem.cpp  InputSystem.h
src/App/Picking/: Picking.cpp  Picking.h
src/App/Preview/: PreviewPrimitive.h
src/App/Scene/: Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Scene.cpp  Scene.h
src/App/Tools/: LineTool.h
src/Core/Draw/: IDrawSink.hpp
src/Core/Entity/: ArcEntity.hpp  CircleEntity.hpp  EllipseEntity.hpp  Entity.hpp  EntityAttr.hpp  LineEntity.cpp  LineEntity.hpp  MTextEntity.hpp  ObjectFactory.hpp  PointEntity.hpp  PolylineEntity.hpp  RectangleEntity.hpp  SplineEntity.hpp  TextEntity.hpp
src/Core/GeomKernel/: AABB.hpp  Arc.hpp  Circle.hpp  Ellipse.hpp  Line.hpp  Point.hpp  Polyline.hpp  Rectangle.hpp  Spline.hpp  XLine.hpp
src/Core/Math/: Box2.hpp  Circle2.hpp  Color4.hpp  Constants.hpp  Mat4.hpp  MathUtils.hpp  PackedTypes.hpp  Point2.hpp  Point3.hpp  Transform.hpp  Vec2.hpp  Vec3.hpp
src/Core/Object/: Object.hpp  ObjectIDGenerator.hpp  RuntimeType.hpp
src/Document/: Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  DrawContext.hpp
src/Document/Command/: AddEntityCommand.h  BatchAddCommand.h  BatchCommand.h  BatchDeleteCommand.h  CopyCommand.cpp  CopyCommand.h  DragEntitiesCommand.h  DragLineCommand.h  EntityMirror.cpp  EntityMirror.h  EntityRotate.cpp  EntityRotate.h  EntityTranslate.cpp  EntityTranslate.h  MirrorCopyCommand.cpp  MirrorCopyCommand.h  MirrorMoveCommand.cpp  MirrorMoveCommand.h  MoveCommand.cpp  MoveCommand.h  MoveEntityEntry.h  RotateCopyCommand.cpp  RotateCopyCommand.h  RotateMoveCommand.cpp  RotateMoveCommand.h  UpdateLineEntityCommand.h
src/Document/CommandStack/: CommandStack.cpp  CommandStack.h  ICommand.h
src/Editor/Context/: EditorContext.cpp  EditorContext.h  ViewState.h
src/Editor/Grip/: ArcGripHandler.h  CircleGripHandler.h  EllipseGripHandler.h  GripEditor.cpp  GripEditor.h  GripType.h  IEntityGripHandler.h  LineGripHandler.h  PointGripHandler.h  PolylineGripHandler.h  RectangleGripHandler.h  SplineGripHandler.h
src/Editor/Input/: InputEvent.h  InputSystem.cpp  InputSystem.h  KeyCode.h  KeyCodeUtils.cpp  KeyCodeUtils.h  ViewportInput.h  ViewportInputAdapter.cpp  ViewportInputAdapter.h
src/Editor/Overlay/: Overlay.h
src/Editor/Picking/: Picking.cpp  Picking.h
src/Editor/Snap/: SnapEngine.cpp  SnapEngine.h  SnapResult.h
src/Editor/Tools/: ArcTool.h  CircleTool.h  EllipseTool.h  ITool.h  LineTool.h  PointTool.h  PolylineTool.h  RectangleTool.h  SplineTool.h  TextTool.h
src/Editor/Viewport/: Axis.h  Camera.cpp  Camera.h  Cursor.h  Gizmo.h  Grid.h  Viewport.cpp  Viewport.h
src/Math/: Box.hpp  GeometryUtils.hpp  MathDefs.hpp  Matrix.hpp  Point.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp
src/Render/: GpuTypes.hpp  IRenderTarget.h  IRenderer.h  RenderTargetFactory.hpp  RendererFactory.hpp  VertexTypes.hpp
src/Render/D3D11/: D3D11RenderTarget.cpp  D3D11RenderTarget.h  D3D11Renderer.cpp  D3D11Renderer.h  Device.cpp  Device.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h
src/Render/Viewport/: Camera.cpp  Camera.h  Grid.cpp  Grid.h  Viewport.cpp  Viewport.h
src/Render/WebGL/: WebFontAtlas.hpp  WebGLRenderTarget.cpp  WebGLRenderTarget.h  WebGLRenderer.cpp  WebGLRenderer.hpp
src/Scene/: Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Scene.cpp  Scene.h
src/Serialization/: AsciiSerializer.cpp  AsciiSerializer.h  BinarySerializer.cpp  BinarySerializer.h  ISerializer.h
src/Text/: FontSystem.h
src/Text/Font/: FontEngine.cpp  FontEngine.h  IFont.h  SHXCompositeFont.cpp  SHXCompositeFont.h  SHXFont.cpp  SHXFont.h  TTFFont.cpp  TTFFont.h  Utf8Iterator.h
src/Text/Glyph/: Glyph.h  GlyphCache.h  GlyphKey.h
src/Text/Layout/: TextLayoutEngine.cpp  TextLayoutEngine.h
src/Text/Parser/: SHXParser.cpp  SHXParser.h  SHXVM.cpp  SHXVM.h  TTFParser.cpp  TTFParser.h
src/UI/: ImGuiLayer.cpp  ImGuiLayer.h  UIManager.cpp  UIManager.h
src/UI/Widgets/: ImGuiWidgetBase.h
src/app/: Editor.cpp  Editor.h  InputEvent.h  Main.cpp  SceneRenderer.cpp  SceneRenderer.h
src/app/Command/: AddEntityCommand.cpp  AddEntityCommand.h  ChangeAttrCommand.cpp  ChangeAttrCommand.h  DeleteEntityCommand.cpp  DeleteEntityCommand.h
src/app/Picking/: PickResult.h  Picker.cpp  Picker.h  SelectionSet.cpp  SelectionSet.h
src/app/Scene/: Layer.hpp  LayerManager.cpp  LayerManager.h  Scene.cpp  Scene.h
src/app/Tools/: ITool.h  LineTool.cpp  LineTool.h
src/core/Entity/: EntityAttr.h  LineEntity.cpp  LineEntity.h
src/core/GeomKernel/: Line.hpp
src/core/Object/: IDAllocator.hpp  Object.hpp  RuntimeType.hpp
src/doc/Archive/: JsonSerializer.cpp  (+2 more)
src/math/: Ray.hpp
tests/:  test_math.cpp  test_add_entity_command.cpp  test_change_attr_command.cpp  test_command_stack.cpp  test_command_stack_integration.cpp  test_delete_entity_command.cpp  test_editor_line_tool.cpp  test_json_serializer.cpp  test_layer.cpp  test_layer_manager.cpp  test_line_entity.cpp  test_math.cpp  test_picker.cpp  test_scene.cpp  test_selection_set.cpp
web/: index.html
(+49 files in other folders)
